// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectAnalyticsCycleWise /> is rendered correctly when the data are loading 1`] = `
<table
  className="table table-striped table-hover"
>
  <thead>
    <tr>
      <th
        className="text-center"
      >
        <select
          className="form-control"
          name="client"
          onChange={[Function]}
          value=""
        >
          <option
            value=""
          >
            Select client
          </option>
        </select>
      </th>
      <th
        className="text-center"
      >
        Cycle
      </th>
      <th
        className="text-center"
      >
        <select
          className="form-control"
          name="month"
          onChange={[Function]}
          value="01"
        >
          <option
            value=""
          >
            Select month
          </option>
          <option
            value="01"
          >
            January
          </option>
          <option
            value="02"
          >
            February
          </option>
          <option
            value="03"
          >
            March
          </option>
          <option
            value="04"
          >
            April
          </option>
          <option
            value="05"
          >
            May
          </option>
          <option
            value="06"
          >
            June
          </option>
          <option
            value="07"
          >
            July
          </option>
          <option
            value="08"
          >
            August
          </option>
          <option
            value="09"
          >
            September
          </option>
          <option
            value="10"
          >
            October
          </option>
          <option
            value="11"
          >
            November
          </option>
          <option
            value="12"
          >
            December
          </option>
        </select>
      </th>
      <th
        className="text-center"
      >
        <select
          className="form-control"
          name="year"
          onChange={[Function]}
          value={2022}
        >
          <option
            value={2022}
          >
            2022
          </option>
          <option
            value={2021}
          >
            2021
          </option>
          <option
            value={2020}
          >
            2020
          </option>
          <option
            value={2019}
          >
            2019
          </option>
          <option
            value={2018}
          >
            2018
          </option>
          <option
            value={2017}
          >
            2017
          </option>
          <option
            value={2016}
          >
            2016
          </option>
          <option
            value={2015}
          >
            2015
          </option>
          <option
            value={2014}
          >
            2014
          </option>
          <option
            value={2013}
          >
            2013
          </option>
        </select>
      </th>
      <th
        className="text-center"
      >
        Total audits
      </th>
      <th
        className="text-center"
      >
        Applications
      </th>
      <th
        className="text-center"
      >
        Unique auditors
      </th>
      <th
        className="text-center"
      >
        New Auditors
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      style={
        Object {
          "borderBottom": "1px solid gray",
          "borderTop": "1px solid gray",
        }
      }
    >
      <th
        className="text-center"
        colSpan="4"
      >
        Total
      </th>
      <th
        className="text-center"
      >
        0
      </th>
      <th
        className="text-center"
      >
        0
      </th>
      <th
        className="text-center"
      >
        0
      </th>
      <th
        className="text-center"
      >
        0
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`<ProjectAnalyticsCycleWise /> is rendered correctly when the data is successfully loaded 1`] = `
<table
  className="table table-striped table-hover"
>
  <thead>
    <tr>
      <th
        className="text-center"
      >
        <select
          className="form-control"
          name="client"
          onChange={[Function]}
          value=""
        >
          <option
            value=""
          >
            Select client
          </option>
        </select>
      </th>
      <th
        className="text-center"
      >
        Cycle
      </th>
      <th
        className="text-center"
      >
        <select
          className="form-control"
          name="month"
          onChange={[Function]}
          value="01"
        >
          <option
            value=""
          >
            Select month
          </option>
          <option
            value="01"
          >
            January
          </option>
          <option
            value="02"
          >
            February
          </option>
          <option
            value="03"
          >
            March
          </option>
          <option
            value="04"
          >
            April
          </option>
          <option
            value="05"
          >
            May
          </option>
          <option
            value="06"
          >
            June
          </option>
          <option
            value="07"
          >
            July
          </option>
          <option
            value="08"
          >
            August
          </option>
          <option
            value="09"
          >
            September
          </option>
          <option
            value="10"
          >
            October
          </option>
          <option
            value="11"
          >
            November
          </option>
          <option
            value="12"
          >
            December
          </option>
        </select>
      </th>
      <th
        className="text-center"
      >
        <select
          className="form-control"
          name="year"
          onChange={[Function]}
          value={2022}
        >
          <option
            value={2022}
          >
            2022
          </option>
          <option
            value={2021}
          >
            2021
          </option>
          <option
            value={2020}
          >
            2020
          </option>
          <option
            value={2019}
          >
            2019
          </option>
          <option
            value={2018}
          >
            2018
          </option>
          <option
            value={2017}
          >
            2017
          </option>
          <option
            value={2016}
          >
            2016
          </option>
          <option
            value={2015}
          >
            2015
          </option>
          <option
            value={2014}
          >
            2014
          </option>
          <option
            value={2013}
          >
            2013
          </option>
        </select>
      </th>
      <th
        className="text-center"
      >
        Total audits
      </th>
      <th
        className="text-center"
      >
        Applications
      </th>
      <th
        className="text-center"
      >
        Unique auditors
      </th>
      <th
        className="text-center"
      >
        New Auditors
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="text-center"
      >
        Reliance
      </td>
      <td
        className="text-center"
      >
        September 2021
      </td>
      <td
        className="text-center"
      >
        September
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        3
      </td>
      <td
        className="text-center"
      >
        1
      </td>
      <td
        className="text-center"
      >
        1
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        FloorWalk
      </td>
      <td
        className="text-center"
      >
        FloorWalk Demo - March 2021
      </td>
      <td
        className="text-center"
      >
        May
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        15
      </td>
      <td
        className="text-center"
      >
        7
      </td>
      <td
        className="text-center"
      >
        2
      </td>
      <td
        className="text-center"
      >
        2
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        FloorWalk
      </td>
      <td
        className="text-center"
      >
        September 2021
      </td>
      <td
        className="text-center"
      >
        October
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        10
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        1
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        FloorWalk
      </td>
      <td
        className="text-center"
      >
        PLL Follow Up
      </td>
      <td
        className="text-center"
      >
        October
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        5
      </td>
      <td
        className="text-center"
      >
        3
      </td>
      <td
        className="text-center"
      >
        1
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        Reliance
      </td>
      <td
        className="text-center"
      >
        November 2021
      </td>
      <td
        className="text-center"
      >
        November
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        10
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr
      style={
        Object {
          "borderBottom": "1px solid gray",
          "borderTop": "1px solid gray",
        }
      }
    >
      <th
        className="text-center"
        colSpan="4"
      >
        Total
      </th>
      <th
        className="text-center"
      >
        43
      </th>
      <th
        className="text-center"
      >
        11
      </th>
      <th
        className="text-center"
      >
        5
      </th>
      <th
        className="text-center"
      >
        2
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`<ProjectAnalyticsMonthWise /> is rendered correctly when the data are loading 1`] = `
<table
  className="table table-striped table-hover"
>
  <thead>
    <tr>
      <th
        className="text-center"
      >
        Month
      </th>
      <th
        className="text-center"
      >
        <select
          className="form-control"
          name="year"
          onChange={[Function]}
          value={2022}
        >
          <option
            value={2022}
          >
            2022
          </option>
          <option
            value={2021}
          >
            2021
          </option>
          <option
            value={2020}
          >
            2020
          </option>
          <option
            value={2019}
          >
            2019
          </option>
          <option
            value={2018}
          >
            2018
          </option>
          <option
            value={2017}
          >
            2017
          </option>
          <option
            value={2016}
          >
            2016
          </option>
          <option
            value={2015}
          >
            2015
          </option>
          <option
            value={2014}
          >
            2014
          </option>
          <option
            value={2013}
          >
            2013
          </option>
        </select>
      </th>
      <th
        className="text-center"
      >
        Total audits
      </th>
      <th
        className="text-center"
      >
        Applications
      </th>
      <th
        className="text-center"
      >
        Unique auditors
      </th>
      <th
        className="text-center"
      >
        New Auditors
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      style={
        Object {
          "borderBottom": "1px solid gray",
          "borderTop": "1px solid gray",
        }
      }
    >
      <th
        className="text-center"
        colSpan="2"
      >
        Total
      </th>
      <th
        className="text-center"
      >
        0
      </th>
      <th
        className="text-center"
      >
        0
      </th>
      <th
        className="text-center"
      >
        0
      </th>
      <th
        className="text-center"
      >
        0
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`<ProjectAnalyticsMonthWise /> is rendered correctly when the data is successfully loaded 1`] = `
<table
  className="table table-striped table-hover"
>
  <thead>
    <tr>
      <th
        className="text-center"
      >
        Month
      </th>
      <th
        className="text-center"
      >
        <select
          className="form-control"
          name="year"
          onChange={[Function]}
          value={2022}
        >
          <option
            value={2022}
          >
            2022
          </option>
          <option
            value={2021}
          >
            2021
          </option>
          <option
            value={2020}
          >
            2020
          </option>
          <option
            value={2019}
          >
            2019
          </option>
          <option
            value={2018}
          >
            2018
          </option>
          <option
            value={2017}
          >
            2017
          </option>
          <option
            value={2016}
          >
            2016
          </option>
          <option
            value={2015}
          >
            2015
          </option>
          <option
            value={2014}
          >
            2014
          </option>
          <option
            value={2013}
          >
            2013
          </option>
        </select>
      </th>
      <th
        className="text-center"
      >
        Total audits
      </th>
      <th
        className="text-center"
      >
        Applications
      </th>
      <th
        className="text-center"
      >
        Unique auditors
      </th>
      <th
        className="text-center"
      >
        New Auditors
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="text-center"
      >
        January
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        February
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        March
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        April
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        May
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        15
      </td>
      <td
        className="text-center"
      >
        7
      </td>
      <td
        className="text-center"
      >
        2
      </td>
      <td
        className="text-center"
      >
        2
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        June
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        July
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        August
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        September
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        3
      </td>
      <td
        className="text-center"
      >
        1
      </td>
      <td
        className="text-center"
      >
        1
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        October
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        15
      </td>
      <td
        className="text-center"
      >
        3
      </td>
      <td
        className="text-center"
      >
        2
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        November
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        10
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr>
      <td
        className="text-center"
      >
        December
      </td>
      <td
        className="text-center"
      >
        2021
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
      <td
        className="text-center"
      >
        0
      </td>
    </tr>
    <tr
      style={
        Object {
          "borderBottom": "1px solid gray",
          "borderTop": "1px solid gray",
        }
      }
    >
      <th
        className="text-center"
        colSpan="2"
      >
        Total
      </th>
      <th
        className="text-center"
      >
        43
      </th>
      <th
        className="text-center"
      >
        11
      </th>
      <th
        className="text-center"
      >
        5
      </th>
      <th
        className="text-center"
      >
        2
      </th>
    </tr>
  </tbody>
</table>
`;
